--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
   <header id="header" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div id="logo" class="fl_left">
-      <h1><a href="#">POSTE MAROC</a></h1>
+      <h1><a href="#">POSTE MAROC Moha</a></h1>
     
     </div>
     <!-- ################################################################################################ -->
