--- a/src/main/resources/templates/tournee.html
+++ b/src/main/resources/templates/tournee.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-12">
             <ul class="nospace inline pushright">
-                <li><a class="btn" href="#">Ajouter une nouvelle tournée</a></li>
+                <li><a class="btn" th:href="@{/tournee/add}">Ajouter une nouvelle tournée</a></li>
             </ul>
             <br/>
             <table class="table-striped" id="dataTable">
