--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,29 +22,25 @@
         <header id="header" class="hoc clear">
             <!-- ################################################################################################ -->
             <div id="logo" class="fl_left">
-                <h1><a href="index.html">POSTE MAROC</a></h1>
+                <h1><a th:href="@{/index}">POSTE MAROC</a></h1>
 
             </div>
             <!-- ################################################################################################ -->
             <nav id="mainav" class="fl_right">
                 <ul class="clear">
-                    <li class="active"><a href="index.html">Accueil</a></li>
-                    <li><a class="drop" href="/pages/tournee.js">Tournées</a>
-                        <ul>
-                            <li><a href="pages/gallery.html"></a></li>
-                            <li><a href="pages/full-width.html"></a></li>
-                        </ul>
+                    <li class="active"><a th:href="@{/index}">Accueil</a></li>
+                    <li><a class="drop" th:href="@{/tournee/all}">Tournées</a>
                     </li>
-                    <li ><a class="drop" href="pages/gallery.html">RH</a>
+                    <li ><a class="drop" href="#">RH</a>
                         <ul class="drop" href="#">
                             <li><a class="drop" href="#">Personnel</a></li>
-                            <li><a class="drop" href="#">Facteurs</a></li>
+                            <li><a class="drop" th:href="@{/facteur/all}">Facteurs</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Cyclo</a></li>
                     <li><a href="#">ZND</a></li>
-                    <li><a href="pages/sidebar-right.html">BLS</a></li>
-                    <li><a href="pages/basic-grid.html">Régions</a></li>
+                    <li><a href="#">BLS</a></li>
+                    <li><a th:href="@{/region/all}">Régions</a></li>
                 </ul>
             </nav>
             <!-- ################################################################################################ -->
