--- a/src/main/resources/templates/siteForm.html
+++ b/src/main/resources/templates/siteForm.html
@@ -60,14 +60,9 @@
 <div th:replace="fragments/footer :: footer">
     <div class="page-footer"></div>
 </div>
-<script>
-    $(document).ready(function() {
-        $("#datepicker").datepicker();
-    } );
-</script>
 
 <script type="text/javascript" th:src="@{../layout/scripts/jquery.backtotop.js}"></script>
 <script type="text/javascript" th:src="@{../layout/scripts/jquery.mobilemenu.js}"></script>
-
+<script type="text/javascript" th:src="@{../local/js/siteForm.js}"></script>
 </body>
 </html>
