--- a/src/main/resources/templates/tournee.html
+++ b/src/main/resources/templates/tournee.html
@@ -15,72 +15,83 @@
 <div class="wrapper row2">
     <div class="hoc container clear row">
         <div class="col-md-12">
-            <form class="row form-horizontal" action="#" method="post">
-                <div class="col-md-3">
-                    <div class="form-group row">
-                        <label for="ville" class="col-md-4 control-label">Ville</label>
-                        <div class="col-md-8">
-                            <select class="form-control" id="ville" name="id_ville">
-                                <option selected="selected">All</option>
-                                <option th:each="ville : ${villes}" th:value="${ville.id}" th:text="${ville.nom}"></option>
-                            </select>
+            <div class="panel panel-primary">
+                <div class="panel-body">
+                    <form class="row form-horizontal" action="#" method="post">
+                        <div class="col-md-3">
+                            <div class="form-group row">
+                                <label for="ville" class="col-md-4 control-label">Ville</label>
+                                <div class="col-md-8">
+                                    <select class="form-control" id="ville" name="id_ville">
+                                        <option selected="selected">All</option>
+                                        <option th:each="ville : ${villes}" th:value="${ville.id}" th:text="${ville.nom}"></option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group row">
-                        <label for="site" class="col-md-4 control-label">Site</label>
-                        <div class="col-md-8">
-                            <select class="form-control" id="site" name="id_site">
-                                <option th:each="site : ${sites}" th:value="${site.id}" th:text="${site.nom}"></option>
-                            </select>
+                        <div class="col-md-3">
+                            <div class="form-group row">
+                                <label for="site" class="col-md-4 control-label">Site</label>
+                                <div class="col-md-8">
+                                    <select class="form-control" id="site" name="id_site">
+                                        <option th:each="site : ${sites}" th:value="${site.id}" th:text="${site.nom}"></option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group row">
-                        <label for="datepicker" class="col-md-4 control-label">Data ></label>
-                        <div class="col-md-8">
-                            <input type="text" class="form-control" id="datepicker" placeholder="Type"/>
+                        <div class="col-md-3">
+                            <div class="form-group row">
+                                <label for="datepicker" class="col-md-4 control-label">Data ></label>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control" id="datepicker" placeholder="Type"/>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                        <div class="col-md-3">
+                            <button type="submit" class="btn">Recherche</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="col-md-3">
-                    <button type="submit" class="btn">Recherche</button>
-                </div>
-            </form>
+            </div>
         </div>
         <div class="col-md-12">
             <ul class="nospace inline pushright">
                 <li><a class="btn" th:href="@{/tournee/add}">Ajouter une nouvelle tournée</a></li>
             </ul>
             <br/>
-            <table class="table-striped" id="dataTable">
-                <caption><h3>Liste Tournée</h3></caption>
-                <thead class="drop">
-                <tr class="drop">
-                    <th>#</th>
-                    <th>Numero De Tournée</th>
-                    <th>Date De Tournée</th>
-                    <th >Trajet Longueur</th>
-                    <th >Montant D'Indémnité</th>
-                    <th >Facteur Résponsable</th>
-                    <th >Matricule de Cyclo</th>
-                </tr>
-                </thead>
-                <tbody >
-                <tr th:each="tour :${tours}">
-                    <td th:text="${tour.id}"></td>
-                    <td th:text="${tour.numero}"></td>
-                    <td th:text="${tour.dateTournee}"></td>
-                    <td th:text="${tour.trajetLongeur}"> :KM</td>
-                    <td th:text="${tour.MntIndemnite}"> :DH</td>
-                    <td></td>
-                    <td ></td>
-                </tr>
+            <div class="panel panel-primary">
+                <div class="panel-body">
+                    <table class="table-striped" id="dataTable">
+                        <caption><h3>Liste Tournée</h3></caption>
+                        <thead class="drop">
+                        <tr class="drop">
+                            <th>#</th>
+                            <th>Numero De Tournée</th>
+                            <th>Date De Tournée</th>
+                            <th >Trajet Longueur</th>
+                            <th >Montant D'Indémnité</th>
+                            <th>Site</th>
+                            <th >Facteur Résponsable</th>
+                            <th >Matricule de Cyclo</th>
+                        </tr>
+                        </thead>
+                        <tbody >
+                        <tr th:each="tour :${tours}">
+                            <td th:text="${tour.id}"></td>
+                            <td th:text="${tour.numero}"></td>
+                            <td th:text="${tour.dateTournee}"></td>
+                            <td th:text="${tour.trajetLongeur}"> :KM</td>
+                            <td th:text="${tour.MntIndemnite}"> :DH</td>
+                            <td th:text="${tour.site.nom}"></td>
+                            <td th:text="${tour?.facteur?.nom}"></td>
+                            <td th:text="${tour?.cyclo?.matricule}"></td>
+                        </tr>
 
-                </tbody>
-            </table>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
         </div>
 
     </div>
@@ -90,16 +101,9 @@
 <div th:replace="fragments/footer :: footer">
     <div class="page-footer"></div>
 </div>
-<script>
-    $(document).ready(function() {
-        $("#datepicker").datepicker();
-        $('#dataTable').DataTable();
-
-    } );
-</script>
 
 <script type="text/javascript" th:src="@{../layout/scripts/jquery.backtotop.js}"></script>
 <script type="text/javascript" th:src="@{../layout/scripts/jquery.mobilemenu.js}"></script>
-
+<script type="text/javascript" th:src="@{../local/js/tournee.js}"></script>
 </body>
 </html>
