--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,168 +1,87 @@
 <!DOCTYPE html>
 
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-<title>Nodelle</title>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+<head th:replace="fragments/head :: head">
 
-  <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all"/>
+
 </head>
-<body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row0">
-  <div id="topbar" class="hoc clear"> 
-    <!-- ################################################################################################ -->
+<body >
 
-    <div class="fl_right">
-      <ul class="nospace">
-        <li><i class="fa fa-phone"></i> +212 656557890</li>
-        <li><i class="fa fa-envelope-o"></i> manar@domain.com</li>
-      </ul>
-    </div>
-    <!-- ################################################################################################ -->
-  </div>
+
+<div th:replace="fragments/header :: header">
+    <div class="page-header"></div>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row1">
-  <header id="header" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <div id="logo" class="fl_left">
-      <h1><a href="#">POSTE MAROC</a></h1>
-    
-    </div>
-    <!-- ################################################################################################ -->
-    <nav id="mainav" class="fl_right">
-      <ul class="clear">
-        <li class="active"><a th:href="@{/index}">Accueil</a></li>
-        <li><a class="drop" href="#">Sites</a>
-          <ul class="drop">
-            <li><a class="drop" th:href="@{/site/all}">Consulter</a></li>
-            <li><a class="drop" th:href="@{/site/add}">Ajouter</a></li>
-          </ul>
-        </li>
-        <li><a class="drop" href="#">Tournées</a>
-          <ul class="drop">
-            <li><a class="drop" th:href="@{/tournee/all}">Consulter</a></li>
-            <li><a class="drop" th:href="@{/tournee/add}">Ajouter</a></li>
-          </ul>
-        </li>
-        <li ><a class="drop" href="#">RH</a>
-          <ul class="drop" href="#">
-            <li><a class="drop" href="#">Personnel</a></li>
-            <li><a class="drop" th:href="@{/facteur/all}">Facteurs</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Cyclo</a></li>
-        <li><a href="#">ZND</a></li>
-        <li><a href="#">BLS</a></li>
-        <li><a th:href="@{/region/all}">Régions</a></li>
-      </ul>
-    </nav>
-    <!-- ################################################################################################ -->
-  </header>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+
 <div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');">
-  <div id="pageintro" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <article>
-      <div>
-        <h1 class="heading">POSTE MAROC</h1>
-        <p class="heading">Le contact qui vous facilite la vie.</p>
-     
-     
-      </div>
-    
-    </article>
-    <!-- ################################################################################################ -->
-  </div>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+    <div id="pageintro" class="hoc clear">
+        <!-- ################################################################################################ -->
+        <article>
+            <div>
+                <h1 class="heading">POSTE MAROC</h1>
+                <p class="heading">Le contact qui vous facilite la vie.</p>
 
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+
+            </div>
+
+        </article>
+        <!-- ################################################################################################ -->
+    </div>
+</div>
+
 <div class="wrapper row3">
-  <main class="hoc container clear"> 
-    <!-- main body -->
-    <!-- ################################################################################################ -->
-    <ul class="nospace group services">
-      <li class="one_third first btmspace-30">
-        <article><a href="#"><i class="fa fa-4x fa-language"></i></a>
-          <h6 class="heading font-x1">Tournées</h6>
-          
-        </article>
-      </li>
-      <li class="one_third btmspace-30">
-        <article><a href="#"><i class="fa fa-4x fa-balance-scale"></i></a>
-          <h6 class="heading font-x1">Vestibulum at semper</h6>
-          <p>Vitae neque ac ullamcorper nulla id hendrerit phasellus pretium mi in&hellip;</p>
-        </article>
-      </li>
-      <li class="one_third btmspace-30">
-        <article><a href="#"><i class="fa fa-4x fa-map-signs"></i></a>
-          <h6 class="heading font-x1">Tincidunt ullamcorper</h6>
-          <p>Lacinia interdum dui diam pharetra velit eget accumsan turpis neque&hellip;</p>
-        </article>
-      </li>
-      <li class="one_third first">
-        <article><a href="#"><i class="fa fa-4x fa-binoculars"></i></a>
-          <h6 class="heading font-x1">Dolor nec malesuada</h6>
-          <p>Sagittis massa in metus vehicula blandit tellus pulvinar donec&hellip;</p>
-        </article>
-      </li>
-      <li class="one_third">
-        <article><a href="#"><i class="fa fa-4x fa-paw"></i></a>
-          <h6 class="heading font-x1">Ultrices ut porta sed</h6>
-          <p>Purus elit interdum nibh cursus nisl tellus egestas nunc fusce in&hellip;</p>
-        </article>
-      </li>
-      <li class="one_third">
-        <article><a href="#"><i class="fa fa-4x fa-qrcode"></i></a>
-          <h6 class="heading font-x1">A viverra vestibulum</h6>
-          <p>Id condimentum ligula purus non massa mattis rhoncus cum&hellip;</p>
-        </article>
-      </li>
-    </ul>
-    <!-- ################################################################################################ -->
-    <!-- / main body -->
-    <div class="clear"></div>
-  </main>
+    <main class="hoc container clear">
+        <!-- main body -->
+        <!-- ################################################################################################ -->
+        <ul class="nospace group services">
+            <li class="one_third first btmspace-30">
+                <article><a href="#"><i class="fa fa-4x fa-language"></i></a>
+                    <h6 class="heading font-x1">Tournées</h6>
+
+                </article>
+            </li>
+            <li class="one_third btmspace-30">
+                <article><a href="#"><i class="fa fa-4x fa-balance-scale"></i></a>
+                    <h6 class="heading font-x1">Vestibulum at semper</h6>
+                    <p>Vitae neque ac ullamcorper nulla id hendrerit phasellus pretium mi in&hellip;</p>
+                </article>
+            </li>
+            <li class="one_third btmspace-30">
+                <article><a href="#"><i class="fa fa-4x fa-map-signs"></i></a>
+                    <h6 class="heading font-x1">Tincidunt ullamcorper</h6>
+                    <p>Lacinia interdum dui diam pharetra velit eget accumsan turpis neque&hellip;</p>
+                </article>
+            </li>
+            <li class="one_third first">
+                <article><a href="#"><i class="fa fa-4x fa-binoculars"></i></a>
+                    <h6 class="heading font-x1">Dolor nec malesuada</h6>
+                    <p>Sagittis massa in metus vehicula blandit tellus pulvinar donec&hellip;</p>
+                </article>
+            </li>
+            <li class="one_third">
+                <article><a href="#"><i class="fa fa-4x fa-paw"></i></a>
+                    <h6 class="heading font-x1">Ultrices ut porta sed</h6>
+                    <p>Purus elit interdum nibh cursus nisl tellus egestas nunc fusce in&hellip;</p>
+                </article>
+            </li>
+            <li class="one_third">
+                <article><a href="#"><i class="fa fa-4x fa-qrcode"></i></a>
+                    <h6 class="heading font-x1">A viverra vestibulum</h6>
+                    <p>Id condimentum ligula purus non massa mattis rhoncus cum&hellip;</p>
+                </article>
+            </li>
+        </ul>
+        <!-- ################################################################################################ -->
+        <!-- / main body -->
+        <div class="clear"></div>
+    </main>
+</div>
+
+<div th:replace="fragments/footer :: footer">
+    <div class="page-footer"></div>
 </div>
 
 
-<!-- ################################################################################################ -->
-
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row5">
-  <div id="copyright" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Manar Kessou</a></p>
-   
-    <!-- ################################################################################################ -->
-  </div>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
-<!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
-<script type="text/javascript" th:src="@{/lib/js/jquery-3.2.1.js}" />
-
-
+<script type="text/javascript" th:src="@{../layout/scripts/jquery.backtotop.js}"></script>
+<script type="text/javascript" th:src="@{../layout/scripts/jquery.mobilemenu.js}"></script>
 </body>
 </html>
