--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -47,7 +47,7 @@
                             <li><a class="drop" th:href="@{/facteur/all}">Facteurs</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Cyclo</a></li>
+                    <li><a th:href="@{/cyclo/all}">Cyclo</a></li>
                     <li><a href="#">ZND</a></li>
                     <li><a href="#">BLS</a></li>
                     <li><a th:href="@{/region/all}">Régions</a></li>
