--- a/src/main/resources/templates/cycloForm.html
+++ b/src/main/resources/templates/cycloForm.html
@@ -13,8 +13,8 @@
 </div>
 
 <div class="container">
-    <div class="panel panel-default">
-        <div class="panel-heading">Ajouter un Site</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading">Ajouter un Cyclo</div>
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-12">
@@ -70,6 +70,6 @@
 
 <script type="text/javascript" th:src="@{../layout/scripts/jquery.backtotop.js}"></script>
 <script type="text/javascript" th:src="@{../layout/scripts/jquery.mobilemenu.js}"></script>
-
+<script type="text/javascript" th:src="@{../local/js/cycloForm.js}"></script>
 </body>
 </html>
