--- a/src/main/resources/templates/cycloForm.html
+++ b/src/main/resources/templates/cycloForm.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="container">
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">Ajouter un Cyclo</div>
         <div class="panel-body">
             <div class="row">
