--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -49,7 +49,7 @@
                     </li>
                     <li><a th:href="@{/cyclo/all}">Cyclo</a></li>
                     <li><a href="#">ZND</a></li>
-                    <li><a href="#">BLS</a></li>
+                    <li><a th:href="@{/bls/all}">BLS</a></li>
                     <li><a th:href="@{/region/all}">Régions</a></li>
                 </ul>
             </nav>
