--- a/src/main/resources/templates/bls.html
+++ b/src/main/resources/templates/bls.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-12">
             <ul class="nospace inline pushright">
-                <li><a class="btn" th:href="@{/cyclo/add}">Ajouter Une Boite à Lettre</a></li>
+                <li><a class="btn" th:href="@{/bls/add}">Ajouter Une Boite à Lettre</a></li>
             </ul>
             <br/>
             <div class="panel panel-primary">
