--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,39 +34,39 @@
         <!-- ################################################################################################ -->
         <ul class="nospace group services">
             <li class="one_third first btmspace-30">
-                <article><a href="#"><i class="fa fa-4x fa-language"></i></a>
+                <article><a th:href="@{/tournee/all}"><i class="fa fa-4x fa-circle-o"></i></a>
                     <h6 class="heading font-x1">Tournées</h6>
 
                 </article>
             </li>
             <li class="one_third btmspace-30">
-                <article><a href="#"><i class="fa fa-4x fa-balance-scale"></i></a>
-                    <h6 class="heading font-x1">Vestibulum at semper</h6>
-                    <p>Vitae neque ac ullamcorper nulla id hendrerit phasellus pretium mi in&hellip;</p>
+                <article><a th:href="@{/cyclo/all}"><i class="fa fa-4x fa-motorcycle"></i></a>
+                    <h6 class="heading font-x1">Cyclos</h6>
+                    <p></p>
                 </article>
             </li>
             <li class="one_third btmspace-30">
-                <article><a href="#"><i class="fa fa-4x fa-map-signs"></i></a>
-                    <h6 class="heading font-x1">Tincidunt ullamcorper</h6>
-                    <p>Lacinia interdum dui diam pharetra velit eget accumsan turpis neque&hellip;</p>
+                <article><a th:href="@{/facteur/all}"><i class="fa fa-4x fa-users"></i></a>
+                    <h6 class="heading font-x1">Facteurs</h6>
+                    <p></p>
                 </article>
             </li>
             <li class="one_third first">
-                <article><a href="#"><i class="fa fa-4x fa-binoculars"></i></a>
-                    <h6 class="heading font-x1">Dolor nec malesuada</h6>
-                    <p>Sagittis massa in metus vehicula blandit tellus pulvinar donec&hellip;</p>
+                <article><a th:href="@{/bls/all}"><i class="fa fa-4x fa-archive"></i></a>
+                    <h6 class="heading font-x1">Boite à Lettre</h6>
+                    <p></p>
                 </article>
             </li>
             <li class="one_third">
-                <article><a href="#"><i class="fa fa-4x fa-paw"></i></a>
-                    <h6 class="heading font-x1">Ultrices ut porta sed</h6>
-                    <p>Purus elit interdum nibh cursus nisl tellus egestas nunc fusce in&hellip;</p>
+                <article><a th:href="@{site/all}"><i class="fa fa-4x fa-institution"></i></a>
+                    <h6 class="heading font-x1">Site</h6>
+                    <p></p>
                 </article>
             </li>
             <li class="one_third">
-                <article><a href="#"><i class="fa fa-4x fa-qrcode"></i></a>
-                    <h6 class="heading font-x1">A viverra vestibulum</h6>
-                    <p>Id condimentum ligula purus non massa mattis rhoncus cum&hellip;</p>
+                <article><a th:href="@{region/all}"><i class="fa fa-4x fa-qrcode"></i></a>
+                    <h6 class="heading font-x1">Régions</h6>
+                    <p></p>
                 </article>
             </li>
         </ul>
